# programming-contest-2021

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  package.sh  readme.txt  run.sh
src/: joiner.cpp  operators.cpp  parser.cpp  relation.cpp  utils.cpp
src/include/: joiner.h  operators.h  parser.h  relation.h  utils.h
src/main/: harness.cpp  main.cpp  query2SQL.cpp
test/: CMakeLists.txt  GTest.CMakeLists.txt  main.cpp  operators_test.cpp  parser_test.cpp  relation_test.cpp
